3.4.6 (2013-11-1)
Enhanced: Added more hooks to debugging page for the Feed to Post add-on.

3.4.5 (2013-10-30)
Bug Fix: Feed items were not being imported while the WPML plugin was active.

3.4.4 (2013-10-26)
New feature: Pagination
New feature: First implementation of editor button for easy shortcode creation
Enhanced: Feed items and sources don't show up in link manager
Enhanced: Included Presstrends code for plugin usage monitoring

3.4.3 (2013-10-20)
Fixed bug: Removed anonymous functions for backwards PHP compatibility
Bug fix: Added suppress_filters in feed-display.php to prevent a user reported error
Bug fix: Missing <li> in certain feed displays

3.4.2 (2013-9-19)
Enhanced: Added some hooks for Feed to Post compatibility
Enhanced: Moved date settings to a more appropriate location

3.4.1 (2013-9-16)
Fixed Bug: Minor issue with options page - PHP notice

3.4 (2013-9-15)
New Feature: Saving/Updating a feed source triggers an update for that source's feed items.
New Feature: Option to change Youtube, Vimeo and Dailymotion feed item URLs to embedded video players URLs
New Feature: Facebook Pages URLs are automatically detected and changed into Atom Feed URLs using FB's Graph
Enhanced: Updated jQuery Colorbox library to 1.4.29
Fixed Bug: Some settings did not have a default value set, and were throwing an 'Undefined Index' error
Fixed Bug: Admin notices do not disappear immediately when dismissed.

3.3.3 (2013-09-08)
Fixed bug: Better function handling on uninstall, should remove uninstall issues

3.3.2 (2013-09-07)
New feature: Added exclude parameter to shortcode
Enhanced: Added metabox links to documentation and add-ons
Fixed bug: Custom feed linking to post on user site rather than original source
Fixed bug: Custom post types issues when activitating the plugin

3.3.1 (2013-08-09)
Fixed bug: Roles and Capabilities file had not been included
Fixed bug: Error on install, function not found

3.3 (2013-08-08)
New feature: OPML importer